--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,1 +1,23 @@
 ﻿appsettings.json
+/build/
+*.suo
+*.user
+_ReSharper.*/
+*.sdf
+bin/
+obj/
+Debug/
+Release/
+*.opensdf
+*.tlog
+*.log
+TestResult.xml
+*.VisualState.xml
+Version.cs
+Version.h
+Version.cpp
+
+*.exe
+*.pdb
+*.manifest
+*.cache
