--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: setup-dotnet
         uses: xt0rted/setup-dotnet@v1.5.0
         with:
-          dotnet-version: "5.0.X"
+          dotnet-version: "5.0.x"
 
       - name: Restore dependencies
         run: dotnet restore
