--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           dotnet-version: "6.0.x"
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore Backend/Backend.csproj
 
       - name: Build App
         run: dotnet build -c Release --no-restore
