--- a/.github/workflows/main_mercadona-zaina.yml
+++ b/.github/workflows/main_mercadona-zaina.yml
@@ -23,12 +23,14 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: 
+        run:  |
           cd Backend
           dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run:  |
+          cd Backend
+          dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
