--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
       - name: publish App
         run:  |
           cd Backend
-          dotnet publish -c Release -o ./out
+          dotnet publish -c Release -o ./out --runtime linux-x64
 
       - name: Deploy to Azure WebApp
         uses: Azure/webapps-deploy@v2
