--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,10 +15,10 @@ jobs:
       - name: setup-dotnet
         uses: xt0rted/setup-dotnet@v1.5.0
         with:
-          dotnet-version: "5.0.x"
+          dotnet-version: "6.0.x"
 
       - name: Restore dependencies
-        run: dotnet restore mercadona-api/Backend.csproj
+        run: dotnet restore mercadona-api/backend.csproj
 
       - name: Build App
         run:  |
