--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,7 +18,7 @@ jobs:
           dotnet-version: "6.0.x"
 
       - name: Restore dependencies
-        run: dotnet restore mercadona-api/backend.csproj
+        run: dotnet restore 
 
       - name: Build App
         run:  |
