--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,9 @@ jobs:
           cd mercadona-api
           dotnet restore 
 
+      - name: Show current working directory
+        run: pwd
+
       - name: Build App
         run:  |
           cd mercadona-api
