--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ on:
       
 env:
   AZURE_WEBAPP_NAME: Mercadona-api
-  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
+  AZURE_WEBAPP_PACKAGE_PATH: "./api/publish"
 
 jobs:
   build:
@@ -42,6 +42,7 @@ jobs:
           
       - name: Show current working directory
         run: |
+          cd api
           pwd
           ls
           
