--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ on:
       
 env:
   AZURE_WEBAPP_NAME: Mercadona-api
-  AZURE_WEBAPP_PACKAGE_PATH: "./api/publish"
+  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
 
 jobs:
   build:
