--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,7 +38,7 @@ jobs:
         run:  |
           
           cd api
-          dotnet publish ./api.sln -c Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+          dotnet publish ./api.sln -c Release --no-build --output ./api/publish
           
       - name: Show current working directory
         run: |
