--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,10 +4,6 @@ on:
   push:
     branches:
       - main
-      
-env:
-  AZURE_WEBAPP_NAME: Mercadona-api
-  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
 
 jobs:
   build:
@@ -21,37 +17,26 @@ jobs:
         with:
           dotnet-version: "6.0.x"
 
-      - name: Restore dependencies
-        run: |
-          
-          cd api
-          ls
-          dotnet restore 
-
-      - name: Build App
-        run:  |
-          
-          cd api
-          dotnet build ./api.sln -c Release --no-restore 
-
-      - name: publish App
-        run:  |
-          
-          cd api
-          dotnet publish ./api.sln -c Release --no-build --output ./publish
-          
       - name: Show current working directory
         run: |
-          cd api
           pwd
           ls
-          
+
+      - name: Restore dependencies
+        run: dotnet restore 
+
+      - name: Build App
+        run: dotnet build -c Release --no-restore
+
+      - name: publish App
+        run:  dotnet publish -c Release -o ./out 
+
       - name: Deploy to Azure WebApp
         uses: Azure/webapps-deploy@v2
         with: 
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          app-name: 'mercadona-api'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2479CBB6F70C434F93FA538B0A87F694 }}
-          package: "./api/publish"
+          package : ./out
 
 
 
