--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,20 +23,26 @@ jobs:
           ls
 
       - name: Restore dependencies
-        run: dotnet restore 
+        run: |
+          cd api
+          dotnet restore 
 
       - name: Build App
-        run: dotnet build -c Release --no-restore
+        run:  |
+          cd api
+          dotnet build -c Release --no-restore
 
       - name: publish App
-        run:  dotnet publish -c Release -o ./out 
+        run:   |
+          cd api
+          dotnet publish -c Release -o ./out 
 
       - name: Deploy to Azure WebApp
         uses: Azure/webapps-deploy@v2
         with: 
           app-name: 'mercadona-api'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2479CBB6F70C434F93FA538B0A87F694 }}
-          package : ./out
+          package : ./api/out
 
 
 
