--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
             cd front-end
             npm install
+            npm install -g @angular/cli
             ng build --prod
   
       - name: publish App
