--- a/.github/workflows/newangularci-cd.yml
+++ b/.github/workflows/newangularci-cd.yml
@@ -34,7 +34,7 @@ jobs:
       needs: build
       environment:
         name: 'Production'
-        url: $
+        url: mercadona-angular.azurewebsites.net
   
       steps:
         - name: 'Download artifact from build job'            
