--- a/.github/workflows/newangularci-cd.yml
+++ b/.github/workflows/newangularci-cd.yml
@@ -41,6 +41,11 @@ jobs:
           uses: actions/download-artifact@v2
           with:
             name: node-app
+        
+        - name: Show current working directory
+          run: |
+            pwd
+            ls
   
         - name: 'Deploy to Azure Web App'
           id: deploy-to-webapp
@@ -49,5 +54,5 @@ jobs:
             app-name: 'mercadona-angular'
             slot-name: 'Production'
             publish-profile:  ${{ secrets.PUBLISH_PROFILE_ANGULAR }}
-            package: ./dist/front-end
+            package: front-end/dist
   
