--- a/.github/workflows/ci-cd-angular.yml
+++ b/.github/workflows/ci-cd-angular.yml
@@ -17,12 +17,17 @@ jobs:
           with:
             node-version: '16.x'
   
-        - name: npm install, build, and test
+        - name: npm install and build
           run: |
             cd front-end
             npm install
             npm run build --if-present
   
+        - name: Run unit tests
+          run: |
+            cd front-end
+            npm run test --if-present
+
         - name: Upload artifact for deployment job
           uses: actions/upload-artifact@v2
           with:
