--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -1,4 +1,4 @@
-name: Continuous integration and deployment
+name: CI/CD de l'api .net6
 
 on:
   push:
@@ -40,26 +40,17 @@ jobs:
           cd api
           dotnet build -c Release --no-restore
       
-      
-         # - name: Build Angular App
-        #run: |
-          #  cd front-end
-           # npm install
-           # npm install -g @angular/cli
-           # ng build --configuration production 
+      - name: Test App
+        run: |
+          cd api
+          dotnet test
   
       - name: publish App
         run:   |
             cd api
             dotnet publish -c Release -o ./out 
   
-    #  - name: Publish Angular App
-     #   uses: Azure/webapps-deploy@v2
-      #  with:
-       #     app-name: 'mercadona-angular'
-       #     publish-profile: ${{ secrets.PUBLISH_PROFILE_ANGULAR }}
-       #     package: ./front-end/dist/
-
+  
 
       - name: Deploy to Azure WebApp
         uses: Azure/webapps-deploy@v2
