--- a/.github/workflows/ci-cd-angular.yml
+++ b/.github/workflows/ci-cd-angular.yml
@@ -26,7 +26,7 @@ jobs:
         - name: Run unit tests
           run: |
             cd front-end
-            npm run test --if-present
+            npm run test --if-present --verbose
           env:
             CI: true
           
