--- a/.github/workflows/ci-cd-angular.yml
+++ b/.github/workflows/ci-cd-angular.yml
@@ -26,6 +26,7 @@ jobs:
         - name: Run unit tests
           run: |
             cd front-end
+            sed -i -z "s/ removeAllListeners()\n/ removeAllListeners();process.nextTick(() => process.exit(code || 0));\n/g" node_modules/karma/lib/server.js
             npm run test --if-present --verbose
           env:
             CI: true
