--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -103,7 +103,8 @@
 
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
