--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -1,4 +1,4 @@
-name: CI/CD de l'api .net6
+name: Continuous integration and deployment
 
 on:
   push:
@@ -24,29 +24,39 @@ jobs:
           ls
           sed -i "s|REPLACE_DATABASE_CONNECTION_STRING|${{ secrets.DB_CONNECTION_STRING }}|g" ./appsettings.json
           sed -i "s|REPLACE_AZURE_BLOB_STORAGE_CONNECTION_STRING|${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}|g" ./appsettings.json
-
       - name: Show current working directory
         run: |
           pwd
           ls
-
       - name: Restore dependencies
         run: |
           cd api
           dotnet restore 
-
       - name: Build App
         run:  |
           cd api
           dotnet build -c Release --no-restore
       
-    
+      
+         # - name: Build Angular App
+        #run: |
+          #  cd front-end
+           # npm install
+           # npm install -g @angular/cli
+           # ng build --configuration production 
+  
       - name: publish App
         run:   |
             cd api
             dotnet publish -c Release -o ./out 
   
-  
+    #  - name: Publish Angular App
+     #   uses: Azure/webapps-deploy@v2
+      #  with:
+       #     app-name: 'mercadona-angular'
+       #     publish-profile: ${{ secrets.PUBLISH_PROFILE_ANGULAR }}
+       #     package: ./front-end/dist/
+
 
       - name: Deploy to Azure WebApp
         uses: Azure/webapps-deploy@v2
@@ -54,7 +64,3 @@ jobs:
           app-name: 'mercadona-api'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2479CBB6F70C434F93FA538B0A87F694 }}
           package : ./api/out
-
-
-
-        
