--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -37,6 +37,10 @@ jobs:
           cd api
           dotnet build -c Release --no-restore
       
+      - name: Run automated test
+        run: dotnet test -c Release --no-build  
+       
+
   
       - name: publish App
         run:   |
