--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -37,9 +37,11 @@ jobs:
           cd api
           dotnet build -c Release --no-restore
       
-      - name: Run automated test
-        run: dotnet test -c Release --no-build  
-       
+      - name: Run automated test 
+        run: |
+          cd api
+          dotnet test -c Release --no-build  
+        
 
   
       - name: publish App
