--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -32,6 +32,7 @@
           },
           "configurations": {
             "production": {
+              "optimization": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -73,6 +74,7 @@
             "production": {
               "browserTarget": "front-end:build:production",
               "port": 4200
+
             },
             "development": {
               "browserTarget": "front-end:build:development"
