update product ok

--- a/api/api/appsettings.json
+++ b/api/api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDatabase": "Server=studipostgresql.postgres.database.azure.com;Database=mercadona;User Id=zaina@studipostgresql;Password=Ilougane87;TrustServerCertificate=true"
+    "MyDatabase": "Server=localhost;Database=mercadona;User Id=postgres;Password=zedadmin;TrustServerCertificate=true"
   },
   "Serilog": {
     "MinimumLevel": {
