--- a/api/api/appsettings.json
+++ b/api/api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDatabase": "Server=localhost;Database=mercadona;User Id=postgres;Password=zedadmin;TrustServerCertificate=true"
+    "_MyDatabase": "Server=localhost;Database=mercadona;User Id=postgres;Password=zedadmin;TrustServerCertificate=true",
+    "MyDatabase": "Server=vps-506fba80.vps.ovh.net;Port=5432;Database=mercadona;User Id=postgres;Password=zedadmin"
   },
   "Serilog": {
     "MinimumLevel": {
